# trust-autogen

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
air_autogen_trust/: __init__.py  config.py  data_vault.py  errors.py  plugin.py
tests/: conftest.py  test_audit_ledger.py  test_consent_gate.py  test_data_vault.py  test_injection_detector.py  test_plugin.py
